End to end test with Playwright. CSS Reset.

--- a/04_projects/04_prueba_tecnica_react/.env
+++ b/04_projects/04_prueba_tecnica_react/.env
@@ -1,6 +1,6 @@
+VITE_LOCAL_HOST_URL='http://localhost:5173'
 
-
-VITE_CATAAS_IMAGE_URL = 'https://cataas.com/cat/says'
+VITE_CATAAS_IMAGE_URL='https://cataas.com/cat/says'
 
 VITE_PEXELS_URL='https://api.pexels.com/v1'
 VITE_PEXELS_API=EPbzl8M6GhA8skZVx4ZkHL0fomu8TBfHK1UuZcLCD0TINboTV8JCB1YW
