--- a/04_projects/04_prueba_tecnica_react/package.json
+++ b/04_projects/04_prueba_tecnica_react/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@playwright/test": "^1.45.3",
+    "@types/node": "^20.14.12",
     "standard": "^17.1.0",
     "vite": "^5.3.4"
   },
