--- a/04_projects/05-react-movies-database/package.json
+++ b/04_projects/05-react-movies-database/package.json
@@ -7,9 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test":"standard && vite"
+    "test": "standard && vite"
   },
   "dependencies": {
+    "just-debounce-it": "3.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -21,6 +22,6 @@
     "vite": "^5.3.4"
   },
   "eslintConfig": {
-    "extends":"./node_modules/standard/eslintrc.json"
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
