--- a/04_projects/07-building-a-router/package.json
+++ b/04_projects/07-building-a-router/package.json
@@ -7,20 +7,24 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "path-to-regexp": "7.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "globals": "^15.9.0",
-    "standard": "^17.1.0",
-    "vite": "^5.4.1"
+    "@testing-library/react": "16.0.0",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react-swc": "3.5.0",
+    "globals": "15.9.0",
+    "happy-dom": "15.0.0",
+    "standard": "17.1.0",
+    "vite": "5.4.1",
+    "vitest": "2.0.5"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
